--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,7 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+
+
+/* ---------------------MARCAS CARROUSEL------------------------------- */
