--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ code {
   left: 2px;
   right: 0;
   bottom: 0;
-  background-color: #c0c0c0;
+  background-color: #272a2d;
   -webkit-transition: 1s;
   transition: 1s;
 }
@@ -48,8 +48,8 @@ code {
   content: "";
   height: 20px;
   width: 20px;
-  left: 2.2px;
-  bottom: 2px;
+  left: 2.9px;
+  bottom: 1.5px;
   background-color: #a58959;
   -webkit-transition: 1s;
   transition: 1s;
@@ -75,6 +75,3 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-
-
-/* ---------------------MARCAS CARROUSEL------------------------------- */
