--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,5 @@ input:checked + .slider:before {
 .Special {
   background-color: rgb(197, 188, 105);
 }
+
+/* --------------------------------------- */
