--- a/src/index.css
+++ b/src/index.css
@@ -91,11 +91,10 @@ img {
   border-radius: 0.5rem !important;
   height: 10rem;
   width: auto;
-  transition: 1s;
-  border: 2px solid #ad9a72;
+  transition: 400ms;
 }
 img:hover {
-  height: 12rem;
+  border: 2px solid #ad9a72;
 }
 .react-photo-gallery--gallery div {
   justify-content: center;
