--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  
 }
 
 .App-link {
@@ -36,4 +35,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.item {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 24px;
+}
+
+html{
+  background-color: red;
 }
